fix height on ios

--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ body{
 .container{
   width: 100%;
   height: 100%;
-  height: calc(100% - env(safe-area-inset-top) - env(safe-area-inset-bottom));
+  height: calc(100% - env(safe-area-inset-bottom) * 2);
   position: relative;
   display: flex;
   flex-flow: column;
